part of refactor and fix typos