@@ -11,7 +11,7 @@ import java.util.List;
 public class MechanikStrategy implements ContributionStrategy,EmailStrategy,SystemPropertiesStrategy {
     @Override
     public LocalDate calculateValidThru(LocalDate paymentDay, List<ContributionEntity> list) {
-        LocalDate localDate = list.isEmpty() ? paymentDay.plusMonths(6) : list.get(0).getValidThru().plusYears(1);
+        LocalDate localDate = list.isEmpty() ? paymentDay.plusMonths(6) : list.getFirst().getValidThru().plusYears(1);
         logToCalculateValidThru(localDate);
         return localDate;
     }
